# repo-dashboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  MIGRATION-SUMMARY.md  NEXT_STEPS.md  PLAN.md  README.md  pyproject.toml  to-go-plan.md
.github/assets/: demo.tape
gh-repo-dashboard/: .gitignore  BUG_FIX_PR_DETAIL_ERROR_HANDLING.md  PREFETCH_STRATEGY.md  PROGRESSIVE_LOADING.md  PR_DETAIL_FIXES.md  PR_PERFORMANCE_SUMMARY.md  README.md  REFRESH_FEATURE.md  go.mod  go.sum  main.go  test-improvements.md
gh-repo-dashboard/.github/workflows/: ci.yml  release.yml
gh-repo-dashboard/internal/app/: app.go  app_test.go  commands.go  keymap.go  messages.go  pr_test.go  prefetch_test.go  refresh_test.go  update.go  view.go
gh-repo-dashboard/internal/batch/: batch_test.go  runner.go  tasks.go
gh-repo-dashboard/internal/cache/: ttl.go  ttl_test.go
gh-repo-dashboard/internal/discovery/: discovery.go  discovery_test.go
src/multi_repo_view/: __init__.py  __main__.py  app.py  app.tcss  config.py  discovery.py  filters.py  git_ops.py  github_ops.py  modals.py  models.py  utils.py
src/repo_dashboard/: __init__.py  __main__.py  app.py  app.tcss  batch_tasks.py  cache.py  discovery.py  filters.py  git_ops.py  github_ops.py  modals.py  models.py  themes.py  utils.py  vcs_factory.py  vcs_git.py  vcs_jj.py  vcs_protocol.py
tests/: test_app.py  test_batch_tasks.py  test_config.py  test_filters.py  test_git_ops.py  test_git_ops_async.py  test_github_ops.py  test_modals.py  test_models_status.py  test_snapshots.py  test_vcs_factory.py  test_vcs_jj.py
(+34 files in other folders)
