[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-repo-view"
version = "0.1.0"
description = "A Textual TUI for viewing git status across multiple repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "pydantic>=2.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-textual-snapshot>=0.1.0",
]

[project.scripts]
multi-repo-view = "multi_repo_view.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_repo_view"]

[tool.pytest.ini_options]
testpaths = ["tests"]
